# flecs-engine

./: .gitignore  CMakeLists.txt  README.md  bevels.flecs  bistro_correct.ppm  build-wasm.sh  city.flecs  cube.flecs  museum.flecs  run-asan.sh  run-release.bat  run-release.sh  run-tracy.sh  run-wasm.sh  run.bat  run.sh  shell.html  test.sh  test_baseline.sh  test_scenes.sh  textures.html  wasm_console.py  windows_port_plan.md
etc/: flecs_engine.data  flecs_engine.js  flecs_engine.wasm  index.html
etc/assets/scenes/: a_beautiful_game.flecs  bistro.flecs  city.flecs  commercial_refrigerator.flecs  cube.flecs  damaged_helmet.flecs  diffuse_transmission_teacup.flecs  empty.flecs  flight_helmet.flecs  iridescent_dish_with_olives.flecs  kenney_city.flecs  kenney_city_mars.flecs  kenney_city_stresstest.flecs  mars.flecs  mosquito_in_amber.flecs  museum.flecs  sheen_chair.flecs  sheen_cloth.flecs  sponza.flecs  stained_glass_lamp.flecs  transmissive.flecs
etc/assets/scenes/common/: atmosphere_purple.flecs  kenney_assets.flecs  kenney_city_template.flecs
include/: flecs_engine.h
include/modules/: atmosphere.h  camera.h  engine.h  frame_output.h  geometry_mesh.h  geometry_primitives3.h  light.h  material.h  movement.h  render_batches.h  render_effects.h  renderer.h  stars.h  surface.h  time_of_day.h  transform3.h  window.h
src/: main.c  platform.c  platform.h  private.h  tracy_hooks.h  types.h  utils.c  utils.h  vendor.h  webgpu_utils.c  webgpu_utils.h  wgpu_compat.h
src/modules/atmosphere/: atmosphere.c  atmosphere.h
src/modules/camera/: camera.c  camera.h  camera_controller.c
src/modules/engine/: engine.c  engine.h
src/modules/engine/surfaces/: surface.c
src/modules/engine/surfaces/frame_capture/: frame_capture.c
src/modules/engine/surfaces/window/: window.c  window.h
src/modules/geometry3/: bevel.c  bevel_corner.c  box.c  cone.c  cylinder.c  geometry3.c  geometry3.h  geometry3_math.h  hemisphere.c  icosphere.c  ngon.c  quad.c  right_triangle.c  right_triangle_prism.c  sphere.c  triangle.c  triangle_prism.c
src/modules/gltf/: gltf.c
src/modules/input/: input.c  input.h
src/modules/light/: light.c  light.h
src/modules/material/: material.c  material.h
src/modules/movement/: movement.c  movement.h
src/modules/renderer/: cluster.c  cluster.h  debug_server.c  default_attr_cache.c  default_attrs.c  depth_prepass.c  depth_prepass.h  frustum_cull.c  frustum_cull.h  gamma_correct.c  gpu_cull.c  gpu_cull.h  gpu_timing.c  gpu_timing.h  hiz.c  hiz.h  ibl.h  lights.c  mip_pyramid.c  mip_pyramid.h  render_batch.c  render_batch.h  render_batch_extract.c  render_batch_render.c  render_batch_set.c  render_batch_utils.c  render_effect.c  render_effects.c  render_effects.h  render_materials.c  render_materials.h  render_post_process.c  render_texture_arrays.c  render_texture_blit.c  render_textures.c  render_textures.h  render_transmission.c  render_view.c  render_view.h  render_view_shadow.c  (+8 more)
src/modules/renderer/batches/: batch_sets.c  batches.c  batches.h  bevel_box.c  boxes.c  cones.c  infinite_grid.c  infinite_plane.c  mesh.c  primitive_shapes.c  primitive_shapes_w_mat_data.c  primitive_shapes_w_mat_index.c  quads.c  right_triangle_prisms.c  right_triangles.c  skybox.c  textured_mesh.c  triangle_prisms.c  triangles.c  utils.c
src/modules/renderer/batches/common/: common.h  cull.c  extract.c  mesh.c  mesh_shadow.c  render.c  utils.c
src/modules/renderer/batches/mesh/: mesh.c  mesh.h  mesh_shadow.c
src/modules/renderer/batches/primitive_shapes/: boxes.c  mesh.c  quads.c  right_triangle_prisms.c  right_triangles.c  triangle_prisms.c  triangles.c
src/modules/renderer/batches/primitive_shapes_w_mat/: boxes.c  mesh.c  quads.c  right_triangle_prisms.c  right_triangles.c  triangle_prisms.c  triangles.c
src/modules/renderer/batches/primitive_shapes_w_mat_index/: boxes.c  mesh.c  quads.c  right_triangle_prisms.c  right_triangles.c  triangle_prisms.c  triangles.c
src/modules/renderer/bind_groups/: globals.c  instance.c  material.c  textures.c
src/modules/renderer/effects/: bloom.c  tony_mc_mapface.c
src/modules/renderer/effects/atmosphere/: atmosphere.c
src/modules/renderer/effects/auto_exposure/: auto_exposure.c
src/modules/renderer/effects/bloom/: bloom.c
src/modules/renderer/effects/depth_resolve/: depth_resolve.c
src/modules/renderer/effects/fog/: exponential_height_fog.c
src/modules/renderer/effects/gamma/: gamma_correct.c
src/modules/renderer/effects/invert/: invert.c
src/modules/renderer/effects/passthrough/: passthrough.c
src/modules/renderer/effects/ssao/: ssao.c
src/modules/renderer/effects/sunshafts/: sunshafts.c
src/modules/renderer/effects/tony/: tony_mc_mapface.c
src/modules/renderer/ibl/: default_ibl.c  hdri_loader.c  hdri_loader.h  ibl.c  ibl_build.c  ibl_helpers_wgsl.h  ibl_internal.h
src/modules/renderer/shaders/: infinite_grid.c  infinite_plane.c  lit_colored.c  pbr.c  pbr_colored.c  pbr_colored_material_index.c  pbr_textured.c  pbr_transmission.c  pbr_transmission_colored.c  shaders.h  shadow_depth.c  skybox.c
src/modules/renderer/shaders/common/: cluster_wgsl.h  gpu_material_wgsl.h  gpu_transform_wgsl.h  ibl_bindings_wgsl.h  pbr_functions_wgsl.h  pbr_lighting_wgsl.h  pbr_textures_wgsl.h  shadow_wgsl.h  shared_vertex_wgsl.h  uniforms_wgsl.h  util.c
src/modules/renderer/surfaces/: frame_out.c  frame_out.h  macos_surface.m  window.c  window.h
src/modules/stars/: stars.c  stars.h
src/modules/texture/: texture.c  texture.h
src/modules/time_of_day/: time_of_day.c  time_of_day.h
src/modules/transform3/: transform3.c  transform3.h
src/types/: components.h  engine_state.h  gpu_types.h  surface.h
test/scenes/: a_beautiful_game.ppm  bistro.ppm  city.ppm  commercial_refrigerator.ppm  cube.ppm  damaged_helmet.ppm  diffuse_transmission_teacup.ppm  empty.ppm  flight_helmet.ppm  iridescent_dish_with_olives.ppm  kenney_city.ppm  kenney_city_mars.ppm  kenney_city_stresstest.ppm  mars.ppm  mosquito_in_amber.ppm  museum.ppm  sheen_chair.ppm  sheen_cloth.ppm  sponza.ppm  stained_glass_lamp.ppm  transmissive.ppm
