cmake_minimum_required(VERSION 3.20)
project(flecs_engine C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

include(FetchContent)
include(ExternalProject)

find_package(PkgConfig REQUIRED)
pkg_check_modules(WGPU QUIET wgpu-native)

FetchContent_Declare(
  glfw
  GIT_REPOSITORY https://github.com/glfw/glfw.git
  GIT_TAG 3.3.9
)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(glfw)

FetchContent_Declare(
  cglm
  GIT_REPOSITORY https://github.com/recp/cglm.git
  GIT_TAG v0.9.2
)
set(CGLM_SHARED OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(cglm)

FetchContent_Declare(
  flecs
  GIT_REPOSITORY https://github.com/SanderMertens/flecs.git
  GIT_TAG master
)
set(FLECS_SHARED OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(flecs)


file(GLOB_RECURSE FLECS_ENGINE_SOURCES CONFIGURE_DEPENDS
  "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/*.m"
)
add_executable(flecs_engine ${FLECS_ENGINE_SOURCES})
target_compile_definitions(flecs_engine PRIVATE GLFW_EXPOSE_NATIVE_COCOA)

if(WGPU_FOUND)
  target_include_directories(flecs_engine PRIVATE ${WGPU_INCLUDE_DIRS})
  target_link_directories(flecs_engine PRIVATE ${WGPU_LIBRARY_DIRS})
  target_link_libraries(flecs_engine PRIVATE ${WGPU_LIBRARIES})
else()
  set(WGPU_NATIVE_DIR ${CMAKE_BINARY_DIR}/_deps/wgpu_native-src)
  set(WGPU_NATIVE_LIB ${WGPU_NATIVE_DIR}/target/release/libwgpu_native.dylib)

  ExternalProject_Add(
    wgpu_native_ep
    GIT_REPOSITORY https://github.com/gfx-rs/wgpu-native.git
    GIT_TAG v27.0.4.0
    UPDATE_COMMAND ""
    CONFIGURE_COMMAND ""
    BUILD_COMMAND cargo build --release
    BUILD_IN_SOURCE 1
    INSTALL_COMMAND ""
    SOURCE_DIR ${WGPU_NATIVE_DIR}
    BUILD_BYPRODUCTS ${WGPU_NATIVE_LIB}
  )

  add_library(wgpu_native_lib SHARED IMPORTED)
  set_target_properties(wgpu_native_lib PROPERTIES IMPORTED_LOCATION ${WGPU_NATIVE_LIB})
  add_dependencies(wgpu_native_lib wgpu_native_ep)

  target_include_directories(flecs_engine PRIVATE
    ${WGPU_NATIVE_DIR}/ffi
    ${WGPU_NATIVE_DIR}/ffi/webgpu-headers
  )
  target_link_libraries(flecs_engine PRIVATE wgpu_native_lib)
endif()

target_include_directories(flecs_engine PUBLIC
  ${flecs_SOURCE_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
)
target_link_libraries(flecs_engine PRIVATE glfw cglm flecs_static)

if(APPLE)
  find_library(COCOA_FRAMEWORK Cocoa REQUIRED)
  find_library(QUARTZCORE_FRAMEWORK QuartzCore REQUIRED)
  find_library(COREGRAPHICS_FRAMEWORK CoreGraphics REQUIRED)
  find_library(IMAGEIO_FRAMEWORK ImageIO REQUIRED)
  target_link_libraries(flecs_engine PRIVATE
    ${COCOA_FRAMEWORK}
    ${QUARTZCORE_FRAMEWORK}
    ${COREGRAPHICS_FRAMEWORK}
    ${IMAGEIO_FRAMEWORK}
  )
endif()
